log
Wed 20 Mar 2024 07:28:14 PM UTC: 
 tests:  0|5
total_score: 0/70
a8560d2
Wed 20 Mar 2024 07:47:36 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
2e40768
Wed 20 Mar 2024 07:55:00 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:66:22: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   66 |       acumuladorSuma += dato;
      |                      ^~
cc1: all warnings being treated as errors
Compilation failed
35bd99c
Wed 20 Mar 2024 07:56:23 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
fc4f67a
Wed 20 Mar 2024 08:03:24 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
4fabdb5
Wed 20 Mar 2024 08:36:32 PM UTC: 
 exercises.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  4|1
total_score: 50/70
b0f883d
Wed 20 Mar 2024 08:54:09 PM UTC: 
 exercises.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
233c407
